--- a/src/scss/_media-query.scss
+++ b/src/scss/_media-query.scss
@@ -30,6 +30,7 @@
     margin: 3rem auto;
     background-color: $very-light-gray;
     text-align: center;
+    z-index: 3;
     animation: slide-in .5s ease-out;
 
     ul {
@@ -124,12 +125,10 @@
   @keyframes slide-in {
     0% {
       opacity: 0;
-      top: -30vh;
     }
 
     100% {
       opacity: 1;
-      top: 0;
     }
   }
 
